@@ -61,7 +61,7 @@ public:
     virtual int open() = 0;
     virtual int close() = 0;
     virtual bool isClosed() const = 0;
-    virtual int fileno() const = 0;
+    virtual int fileNo() const = 0;
 };
 
 }; // namespace scheme
