@@ -60,7 +60,7 @@ public:
     int open();
     int close();
     bool isClosed() const;
-    int fileno() const;
+    int fileNo() const;
 
 private:
     const uint8_t* const buf_;
