@@ -49,7 +49,7 @@ public:
     int open();
     int close();
     bool isClosed() const;
-    int fileno() const;
+    int fileNo() const;
 
 private:
     VM* theVM_;
